Fixed footer icons overextending on mobile

--- a/site/pages/styles/ubacm/_footer.scss
+++ b/site/pages/styles/ubacm/_footer.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.partial__footer {
+.footer {
   background: $color-a10;
   color: $color-80;
   padding: $space 0;
@@ -10,18 +10,24 @@
     display: flex;
     overflow: hidden;
 
-    .logo {
-      display: inline-block;
-      width: 50px;
-      height: auto;
+    a {
       margin-right: $space;
-    }
 
-    .logo_wide {
-      display: inline-block;
-      width: 140px;
-      height: auto;
-      margin-right: $space;
+      &:last-of-type {
+        margin-right: 0;
+      }
+
+      img.logo {
+        display: inline-block;
+        width: 40px;
+        height: auto;
+      }
+  
+      img.logo_wide {
+        display: inline-block;
+        width: 120px;
+        height: auto;
+      }
     }
   }
 }
